src/css/main.css
body {
  margin:0;
  padding:0;
  background-color: white;
  font-family: 'Open Sans', sans-serif;
}

.textvak {
  height:100px;
  margin-bottom:20px;
  width: 100%;
  font-size:20px;
  padding:10px;
  border:solid 1px black;
}

.badspelling {
  position: relative;
  border-bottom: solid 3px red;
}

.badspelling .suggestions-wrapper {
  position: absolute;
  background: white;
  display: none;
  list-style: none;
  top: 110%;
  left: 0;
  border: 1px solid #eee;
  padding: 0;
  min-width: 100%;
  font-size: 12px;
  max-height: 150px;
  overflow: auto;
}

.badspelling:hover .suggestions-wrapper {
  display: block;
}

.badspelling .suggestions-wrapper li {
  padding: 5px 15px 5px 5px;
}


.badspelling .suggestions-wrapper li:hover {
  background: #d8d8d8;
  cursor: pointer;
}

.label-primary{
  font-size:100% !important;
}

.sidepanel{
  height:800px;
  background-color: #E1E1E1;
  padding: 25px !important;
  margin-top: 50px;
}

.filterpanel{
  background-color: rgb(51, 122, 183);
  height:60px;
  position: absolute;
}

.jumbotron{
  padding:15px !important;
}

/*.tooltipss{
  background-color:#0066cc;
  margin-right: 125px;
  margin-left: 420px;
  color:white;
  padding:10px;
  border-radius:10px;
}*/

.maintekst{
  margin: 0;
padding: 15px;
margin-left: 350px;
color: white;
}

.selected{
  background-color:orange !important;
}

.handselected{
  background-color:orange !important;
}

.label{
   border-radius: 0;
   display: block!important;
   margin-bottom:15px;
   cursor:pointer;
   text-align: left;
   padding:10px;
   margin-right: 40px;
}

h4 {
  border-bottom: 1px solid black;
  padding:5px;
  margin-top: 30px;
  margin-bottom: 20px;
}

.question{
  border-radius: 50%;
  width: 20px;
  height: auto;
  background: #9FD3A1;
  float: right;
  margin: 7px;
  cursor:pointer;
  margin-top: -42px;
  position: relative;
}

.question span{
  padding:7px;
  font-weight:800;
  color:white;
}

.keyword {
  color: black;
text-decoration: none;
/* background-color: #337ab7; */
font-weight: 600;
padding: 5px;
border-radius: 12px;
margin: 8px;
border: solid black 1px;
}

.everything{
  margin-left: 320px;
  margin-top: 100px;
}

.feedback{
  /*margin-top:50px;*/
  font-size:20px;
  font-weight:600;
  display:inline-block;
  margin:0;
}

.save{
  color: white;
text-decoration: none;
float: right;
font-weight: 600;
background-color: #ff99a8;
padding: 11px;
padding-right: 20px;
padding-left: 20px;
cursor:pointer;
}

.save:hover{
  text-decoration: none;
  color:white;
}

.comment{
  width:100%;
  background-color:lightgrey;
  display: inline-block;
  margin-bottom: 10px;
} .comment p {
    margin: 0 0 0;
    padding: 10px;
} .comment span {
  font-weight:600;
  font-size:11px;
}

.approve{
  float:right;
  background-color:blue;
  height:100%;
}

.vraagantwoordtitle{
  font-size:17px;
  font-weight:200;
}

.tooltip-taxonomy{
  position: absolute;
  background-color: grey;
}

.question .tooltip-taxonomy {
    visibility: hidden;
    width: 350px;
    background-color: #555;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    /*padding: 5px 0;*/
    padding:10px;
    position: absolute;
    z-index: 1;
    font-size: 11px;
    font-weight: 200;
    left: -165px;
    bottom: 30px;
    /*margin-bottom: inherit;*/


    /*bottom: 125%;
    left: 50%;
    margin-left: -60px;*/
    opacity: 0;
}

.question .tooltip-taxonomy::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #555 transparent transparent transparent;
}

.question:hover .tooltip-taxonomy {
    visibility: visible;
    opacity: 1;
}

.modall{
  width: 500px;
   height: 450px;
   position: absolute;
   left: 50%;
   top: 50%;
   margin-left: -250px;
   margin-top: -250px;
   background-color: rgb(51, 122, 183);;
}

.modaltextt{
  font-size: 20px;
  padding-left: 25px;
padding-top: 15px;
padding-bottom: 5px;
font-weight: 400;
margin-top: 50px;
margin-bottom: 40px;
}

.txt{
    padding: 10px;
    font-weight: 200;
    padding-top: 10px;
    font-size: 16px;
}

.minititle{
  font-weight: 600;
  font-size: 13px;
  padding: 10px;
  margin-top: 5px;
}

.commentarea{
  width: 500px;
  margin: 25px;
  height: 110px;
}

.opslaan{
margin-right: 30px;
    margin-top: -15px;
}

.qwrapper{
margin-left: 10px;
margin-right: 10px;
border-top: solid white 1px;
padding-top: 15px;
margin-top: 60px;
}

.naamtitle{
  color: black;
padding: 25px;
}

.overlay{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: grey;
    filter:alpha(opacity=50);
    -moz-opacity:0.5;
    -khtml-opacity: 0.5;
    opacity: 0.5;
    z-index: 10000;
}

#modalshare{
  background-color:white;
  z-index:10000000;
  border: solid 1px black;
  height: 250px;
}

.urlval{
    padding: 10px;
    width: 68%;
    margin-top: 50px;
    margin-left: 50px;
    height:43px;
}

.deel{
  background-color: grey;
    color: white;
    margin: 5px;
    padding: 4px;
    font-size: 11px;
    cursor: pointer;
    display:inline-block;
    vertical-align:center;
    text-transform: uppercase;
}

.deel:hover{
  color:white;
  text-decoration: none;
}

h5{
  margin-left: 50px;
    margin-top: 40px;
    font-size:20px;
    font-weight:200;
}

.btncopy{
  background-color: grey;
  color: white;
  padding: 12px;
  cursor:pointer;
}

.btncopy:hover{
  color:white;
  text-decoration: none;
}

.sameheight{
  margin-top: 60px;
}

.backgr{
  background-color:lightgrey;
  height:100vh;
}

.previewwrapper{
  background-color:#74a9d8;
  padding-top: 7px;
  color:white;
  min-height:110px;

}

.namefield{
  width: 78%;
}

